--- a/Education_Practic_num-1/DataSet_Page.xaml
+++ b/Education_Practic_num-1/DataSet_Page.xaml
@@ -16,7 +16,9 @@
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
-
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -31,10 +33,9 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
 
-
         <DataGrid x:Name="Products_DataGrid" AutoGenerateColumns="False"
-                  Grid.Row="1"  Grid.RowSpan="8"
-                  Grid.ColumnSpan="6" Background="#FF2F2F2F"
+                  Grid.Row="1"  Grid.RowSpan="5"
+                  Grid.ColumnSpan="9" Background="#FF2F2F2F"
                   CanUserAddRows="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Наименование продукта" Binding="{Binding Product_Name}" />
@@ -44,24 +45,193 @@
         </DataGrid>
 
         <DataGrid x:Name="Stock_DataGrid" AutoGenerateColumns="False"
-                  Grid.Row="1" Grid.RowSpan="8"
-                  Grid.ColumnSpan="6" 
+                  Grid.Row="1" Grid.RowSpan="5"
+                  Grid.ColumnSpan="9" 
                   Background="#FF2F2F2F"
                   CanUserAddRows="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Количество продуктов" Binding="{Binding Stock_Number_of_Products}" />
                 <DataGridTextColumn Header="Дата поступления" Binding="{Binding Stock_Date_of_Receipt}" />
                 <DataGridTextColumn Header="Идентификатор продукта" Binding="{Binding ID_Product}" />
+                <DataGridTextColumn Header="Наименование продукта" Binding="{Binding Product_Name}" />
             </DataGrid.Columns>
         </DataGrid>
 
-
+        <Button x:Name="Exit"
+                Content="Выход"
+                Grid.ColumnSpan="3" 
+                Background="#FF565656" 
+                Click="Exit_Click" BorderBrush="Red"/>
+        
         <Button x:Name="Open_Table_Products"
                 Content="Открыть таблицу продуктов"
-                Grid.ColumnSpan="3" Background="#FF565656" Click="Open_Table_Products_Click"/>
+                Grid.Column="6"
+                Grid.ColumnSpan="3" 
+                Background="#FF565656" 
+                Click="Open_Table_Products_Click" BorderBrush="Red"/>
 
         <Button x:Name="Open_Table_Stock"
                 Content="Открыть таблицу склада"
-                Grid.Column="3" Grid.ColumnSpan="3" Background="#FF565656" Click="Open_Table_Stock_Click"/>
+                Grid.Column="3" Grid.ColumnSpan="3" 
+                Background="#FF565656" 
+                Click="Open_Table_Stock_Click" BorderBrush="Red"/>
+
+        
+        
+        
+        
+        <Button x:Name="Add_to_Grid"
+                Content="Добавть данные в базу данных"
+                FontFamily="Sans"
+                Grid.ColumnSpan="3" 
+                Grid.Row="8"
+                Background="#FF565656" Click="Add_to_Grid_Click" BorderBrush="Red"/>
+
+        <TextBox x:Name="Write_to_Add_in_Grid_Product"
+                 Grid.Row="7"
+                 Grid.ColumnSpan="1"
+                 VerticalContentAlignment="Bottom"
+                 TextAlignment="Center"
+                 Text="Введите имя продукта"
+                 TextWrapping="Wrap"
+                 GotFocus="Write_to_Add_in_Grid_Product_GotFocus" CaretBrush="Red" SelectionBrush="Red" BorderBrush="Red"/>
+        
+        <TextBox x:Name="Write_to_Add_in_Grid_Cost"
+                 Grid.Row="7"
+                 Grid.Column="1" Grid.ColumnSpan="1"
+                 VerticalContentAlignment="Bottom"
+                 TextAlignment="Center"
+                 Text="Введите стоимость"
+                 TextWrapping="Wrap"
+                 GotFocus="Write_to_Add_in_Grid_Cost_GotFocus" CaretBrush="Red" SelectionBrush="Red" BorderBrush="Red"/>
+
+        <TextBox x:Name="Write_to_Add_in_Grid_Description"
+                 Grid.Row="7"
+                 Grid.Column="2" Grid.ColumnSpan="1"
+                 VerticalContentAlignment="Bottom"
+                 TextAlignment="Center"
+                 Text="Введите описание"
+                 TextWrapping="Wrap"
+                 GotFocus="Write_to_Add_in_Description_GotFocus" CaretBrush="Red" SelectionBrush="Red" BorderBrush="Red"/>
+
+
+
+
+
+        <Button x:Name="Change_in_Grid"
+                Content="Изменить данные в базе данных"
+                FontFamily="Sans"
+                Grid.ColumnSpan="3" Grid.Column="3"
+                Grid.Row="8"
+                Click="Change_in_Grid_Click" BorderBrush="Red" Background="#FF565656"/>
+
+        <TextBox x:Name="Write_to_Change_in_Grid_Product"
+                 Grid.Row="7"
+                 Grid.Column="3"
+                 VerticalContentAlignment="Bottom"
+                 Text="Введите имя продукта"
+                 TextWrapping="Wrap"
+                 TextAlignment="Center"
+                 GotFocus="Write_to_Change_in_Grid_Product_GotFocus" CaretBrush="Red" SelectionBrush="Red" BorderBrush="Red"/>
+        
+        <TextBox x:Name="Write_to_Change_in_Grid_Cost"
+                 Grid.Row="7"
+                 Grid.Column="4"
+                 VerticalContentAlignment="Bottom"
+                 TextAlignment="Center"
+                 Text="Введите стоимость"
+                 TextWrapping="Wrap"
+                 GotFocus="Write_to_Change_in_Grid_Cost_GotFocus" CaretBrush="Red" SelectionBrush="Red" BorderBrush="Red"/>
+        
+        <TextBox x:Name="Write_to_Change_in_Grid_Description"
+                 Grid.Row="7"
+                 Grid.Column="5"
+                 VerticalContentAlignment="Bottom"
+                 TextAlignment="Center"
+                 Text="Введите описание"
+                 TextWrapping="Wrap"
+                 GotFocus="Write_to_Change_in_Description_GotFocus" CaretBrush="Red" SelectionBrush="Red" BorderBrush="Red"/>
+
+
+        <ComboBox x:Name="Name_to_Change"
+                  Grid.Column="3" Grid.ColumnSpan="3"
+                  Grid.Row="6"
+                  VerticalAlignment="Bottom" BorderBrush="Red"/>
+
+
+
+        <Button x:Name="Delete_in_Grid"
+                Content="Удалить данные из базы данных"
+                FontFamily="Sans"
+                Grid.ColumnSpan="3" Grid.Column="6"
+                Grid.Row="8"
+                Background="#FF565656" Click="Delete_in_Grid_Click" BorderBrush="Red"/>
+
+        <ComboBox x:Name="Name_to_Delete"
+                  Grid.Column="6" Grid.ColumnSpan="3"
+                  Grid.Row="6" Grid.RowSpan="2"
+                  VerticalAlignment="Bottom" BorderBrush="Red"/>
+
+        <Rectangle x:Name="Block"
+                   Grid.ColumnSpan="7" 
+                   Grid.RowSpan="4" 
+                   Stroke="#FF2F2F2F"
+                   Grid.Column="1"
+                   Grid.Row="2" Fill="#FF2F2F2F"/>
+
+        
+        <!--Для склада-->
+        <TextBox x:Name="Write_to_Add_in_Grid_Count"
+                 Grid.Row="7"
+                 Grid.ColumnSpan="3"
+                 VerticalContentAlignment="Bottom"
+                 TextAlignment="Center"
+                 Text="Введите количество"
+                 TextWrapping="Wrap"
+                 GotFocus="Write_to_Add_in_Count_GotFocus" CaretBrush="Red" SelectionBrush="Red" BorderBrush="Red"/>
+        
+        <Button x:Name="Add_to_Grid_Stock"
+                Content="Добавть данные в базу данных"
+                FontFamily="Sans"
+                Grid.ColumnSpan="3" 
+                Grid.Row="8"
+                Background="#FF565656" Click="Add_to_Grid_Stock_Click" BorderBrush="Red"/>
+        
+        <Button x:Name="Change_in_Grid_Stock"
+                Content="Изменить данные в базе данных"
+                FontFamily="Sans"
+                Grid.ColumnSpan="3" Grid.Column="3"
+                Grid.Row="8"
+                Background="#FF565656" Click="Change_in_Grid_Stock_Click" BorderBrush="Red"/>
+        
+        <TextBox x:Name="Write_to_Change_in_Grid_Count"
+                 Grid.Row="7"
+                 Grid.Column="3" Grid.ColumnSpan="2"
+                 VerticalContentAlignment="Bottom"
+                 TextAlignment="Center"
+                 Text="Введите количество"
+                 TextWrapping="Wrap"
+                 GotFocus="Write_to_Change_in_Count_GotFocus" CaretBrush="Red" SelectionBrush="Red" BorderBrush="Red"/>
+
+        <ComboBox x:Name="Name_to_Change_Stock"
+                  Grid.Column="5" Grid.ColumnSpan="1"
+                  Grid.Row="7" BorderBrush="Red"
+                  VerticalAlignment="Bottom"/>
+
+
+
+        <ComboBox x:Name="Name_to_Delete_Stock"
+                  Grid.Column="6" Grid.ColumnSpan="3"
+                  Grid.Row="6" Grid.RowSpan="2" BorderBrush="Red"
+                  VerticalAlignment="Bottom"/>
+
+
+        <Button x:Name="Delete_in_Grid_Stock"
+                Content="Удалить данные из базы данных"
+                FontFamily="Sans"
+                Grid.ColumnSpan="3" Grid.Column="6"
+                Grid.Row="8"
+                Background="#FF565656" BorderBrush="Red" Click="Delete_in_Grid_Stock_Click"/>
+
     </Grid>
 </Page>
